# AlsaCAE

./: .gitignore  README.md
app/: build.gradle
app/libs/: alsacae.aar
app/src/androidTest/java/com/iflytek/appcaetest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/iflytek/appcaetest/: MainActivity.java  PcmFileUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/iflytek/appcaetest/: ExampleUnitTest.java
sdk/: build.gradle
sdk/src/main/: AndroidManifest.xml  CMakeLists.txt
sdk/src/main/cpp/: CMakeLists.txt
sdk/src/main/cpp/src/: ErrorCode.h  Recorder.cpp  Recorder.h
sdk/src/main/cpp/src/cae/: CMakeLists.txt  com_iflytek_iflyos_AlsaCAE.cpp  com_iflytek_iflyos_AlsaCAE.h
sdk/src/main/cpp/src/cae/cpu/: android_cpu.c  android_cpu.h
sdk/src/main/cpp/src/cae/exec/: CMakeLists.txt  main.cpp
sdk/src/main/cpp/src/cae/include/: apr_inf.h
sdk/src/main/cpp/src/recorder/alsa/: alsa_recorder.cpp  alsa_recorder.h
sdk/src/main/cpp/src/recorder/include/: asoundlib.h
sdk/src/main/cpp/src/util/android/: android_help.cpp  android_help.h
sdk/src/main/cpp/src/util/jvm/: jvm.cpp
sdk/src/main/cpp/src/util/log/: JniLog.cpp  JniLog.h
sdk/src/main/cpp/src/util/queue/: AudioQueue.c
sdk/src/main/java/com/iflytek/iflyos/: AlsaCAE.java  IListener.java
sdk/src/main/res/values/: strings.xml
